Separated endpoints into its own directory
