# back-end/pkg/restapi/operations/stock_smith_microservices_api.go
@@ -1,0 +1,310 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"fmt"
+	"net/http"
+	"strings"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/loads"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/runtime/security"
+	"github.com/go-openapi/spec"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+
+	"github.com/stocksmith/stockadvisor-web-app/back-end/pkg/restapi/operations/news_api"
+	"github.com/stocksmith/stockadvisor-web-app/back-end/pkg/restapi/operations/stock_api"
+)
+
+// NewStockSmithMicroservicesAPI creates a new StockSmithMicroservices instance
+func NewStockSmithMicroservicesAPI(spec *loads.Document) *StockSmithMicroservicesAPI {
+	return &StockSmithMicroservicesAPI{
+		handlers:            make(map[string]map[string]http.Handler),
+		formats:             strfmt.Default,
+		defaultConsumes:     "application/json",
+		defaultProduces:     "application/json",
+		customConsumers:     make(map[string]runtime.Consumer),
+		customProducers:     make(map[string]runtime.Producer),
+		PreServerShutdown:   func() {},
+		ServerShutdown:      func() {},
+		spec:                spec,
+		ServeError:          errors.ServeError,
+		BasicAuthenticator:  security.BasicAuth,
+		APIKeyAuthenticator: security.APIKeyAuth,
+		BearerAuthenticator: security.BearerAuth,
+
+		JSONConsumer: runtime.JSONConsumer(),
+
+		JSONProducer: runtime.JSONProducer(),
+
+		NewsAPIGetStocksmithAPINewsQueryHandler: news_api.GetStocksmithAPINewsQueryHandlerFunc(func(params news_api.GetStocksmithAPINewsQueryParams) middleware.Responder {
+			return middleware.NotImplemented("operation news_api.GetStocksmithAPINewsQuery has not yet been implemented")
+		}),
+		StockAPIGetStocksmithAPIStocksQueryStockHandler: stock_api.GetStocksmithAPIStocksQueryStockHandlerFunc(func(params stock_api.GetStocksmithAPIStocksQueryStockParams) middleware.Responder {
+			return middleware.NotImplemented("operation stock_api.GetStocksmithAPIStocksQueryStock has not yet been implemented")
+		}),
+		StockAPIGetStocksmithAPIStocksQueryTopHandler: stock_api.GetStocksmithAPIStocksQueryTopHandlerFunc(func(params stock_api.GetStocksmithAPIStocksQueryTopParams) middleware.Responder {
+			return middleware.NotImplemented("operation stock_api.GetStocksmithAPIStocksQueryTop has not yet been implemented")
+		}),
+	}
+}
+
+/*StockSmithMicroservicesAPI the stock smith microservices API */
+type StockSmithMicroservicesAPI struct {
+	spec            *loads.Document
+	context         *middleware.Context
+	handlers        map[string]map[string]http.Handler
+	formats         strfmt.Registry
+	customConsumers map[string]runtime.Consumer
+	customProducers map[string]runtime.Producer
+	defaultConsumes string
+	defaultProduces string
+	Middleware      func(middleware.Builder) http.Handler
+
+	// BasicAuthenticator generates a runtime.Authenticator from the supplied basic auth function.
+	// It has a default implementation in the security package, however you can replace it for your particular usage.
+	BasicAuthenticator func(security.UserPassAuthentication) runtime.Authenticator
+	// APIKeyAuthenticator generates a runtime.Authenticator from the supplied token auth function.
+	// It has a default implementation in the security package, however you can replace it for your particular usage.
+	APIKeyAuthenticator func(string, string, security.TokenAuthentication) runtime.Authenticator
+	// BearerAuthenticator generates a runtime.Authenticator from the supplied bearer token auth function.
+	// It has a default implementation in the security package, however you can replace it for your particular usage.
+	BearerAuthenticator func(string, security.ScopedTokenAuthentication) runtime.Authenticator
+
+	// JSONConsumer registers a consumer for the following mime types:
+	//   - application/json
+	JSONConsumer runtime.Consumer
+
+	// JSONProducer registers a producer for the following mime types:
+	//   - application/json
+	JSONProducer runtime.Producer
+
+	// NewsAPIGetStocksmithAPINewsQueryHandler sets the operation handler for the get stocksmith API news query operation
+	NewsAPIGetStocksmithAPINewsQueryHandler news_api.GetStocksmithAPINewsQueryHandler
+	// StockAPIGetStocksmithAPIStocksQueryStockHandler sets the operation handler for the get stocksmith API stocks query stock operation
+	StockAPIGetStocksmithAPIStocksQueryStockHandler stock_api.GetStocksmithAPIStocksQueryStockHandler
+	// StockAPIGetStocksmithAPIStocksQueryTopHandler sets the operation handler for the get stocksmith API stocks query top operation
+	StockAPIGetStocksmithAPIStocksQueryTopHandler stock_api.GetStocksmithAPIStocksQueryTopHandler
+	// ServeError is called when an error is received, there is a default handler
+	// but you can set your own with this
+	ServeError func(http.ResponseWriter, *http.Request, error)
+
+	// PreServerShutdown is called before the HTTP(S) server is shutdown
+	// This allows for custom functions to get executed before the HTTP(S) server stops accepting traffic
+	PreServerShutdown func()
+
+	// ServerShutdown is called when the HTTP(S) server is shut down and done
+	// handling all active connections and does not accept connections any more
+	ServerShutdown func()
+
+	// Custom command line argument groups with their descriptions
+	CommandLineOptionsGroups []swag.CommandLineOptionsGroup
+
+	// User defined logger function.
+	Logger func(string, ...interface{})
+}
+
+// SetDefaultProduces sets the default produces media type
+func (o *StockSmithMicroservicesAPI) SetDefaultProduces(mediaType string) {
+	o.defaultProduces = mediaType
+}
+
+// SetDefaultConsumes returns the default consumes media type
+func (o *StockSmithMicroservicesAPI) SetDefaultConsumes(mediaType string) {
+	o.defaultConsumes = mediaType
+}
+
+// SetSpec sets a spec that will be served for the clients.
+func (o *StockSmithMicroservicesAPI) SetSpec(spec *loads.Document) {
+	o.spec = spec
+}
+
+// DefaultProduces returns the default produces media type
+func (o *StockSmithMicroservicesAPI) DefaultProduces() string {
+	return o.defaultProduces
+}
+
+// DefaultConsumes returns the default consumes media type
+func (o *StockSmithMicroservicesAPI) DefaultConsumes() string {
+	return o.defaultConsumes
+}
+
+// Formats returns the registered string formats
+func (o *StockSmithMicroservicesAPI) Formats() strfmt.Registry {
+	return o.formats
+}
+
+// RegisterFormat registers a custom format validator
+func (o *StockSmithMicroservicesAPI) RegisterFormat(name string, format strfmt.Format, validator strfmt.Validator) {
+	o.formats.Add(name, format, validator)
+}
+
+// Validate validates the registrations in the StockSmithMicroservicesAPI
+func (o *StockSmithMicroservicesAPI) Validate() error {
+	var unregistered []string
+
+	if o.JSONConsumer == nil {
+		unregistered = append(unregistered, "JSONConsumer")
+	}
+
+	if o.JSONProducer == nil {
+		unregistered = append(unregistered, "JSONProducer")
+	}
+
+	if o.NewsAPIGetStocksmithAPINewsQueryHandler == nil {
+		unregistered = append(unregistered, "news_api.GetStocksmithAPINewsQueryHandler")
+	}
+	if o.StockAPIGetStocksmithAPIStocksQueryStockHandler == nil {
+		unregistered = append(unregistered, "stock_api.GetStocksmithAPIStocksQueryStockHandler")
+	}
+	if o.StockAPIGetStocksmithAPIStocksQueryTopHandler == nil {
+		unregistered = append(unregistered, "stock_api.GetStocksmithAPIStocksQueryTopHandler")
+	}
+
+	if len(unregistered) > 0 {
+		return fmt.Errorf("missing registration: %s", strings.Join(unregistered, ", "))
+	}
+
+	return nil
+}
+
+// ServeErrorFor gets a error handler for a given operation id
+func (o *StockSmithMicroservicesAPI) ServeErrorFor(operationID string) func(http.ResponseWriter, *http.Request, error) {
+	return o.ServeError
+}
+
+// AuthenticatorsFor gets the authenticators for the specified security schemes
+func (o *StockSmithMicroservicesAPI) AuthenticatorsFor(schemes map[string]spec.SecurityScheme) map[string]runtime.Authenticator {
+	return nil
+}
+
+// Authorizer returns the registered authorizer
+func (o *StockSmithMicroservicesAPI) Authorizer() runtime.Authorizer {
+	return nil
+}
+
+// ConsumersFor gets the consumers for the specified media types.
+// MIME type parameters are ignored here.
+func (o *StockSmithMicroservicesAPI) ConsumersFor(mediaTypes []string) map[string]runtime.Consumer {
+	result := make(map[string]runtime.Consumer, len(mediaTypes))
+	for _, mt := range mediaTypes {
+		switch mt {
+		case "application/json":
+			result["application/json"] = o.JSONConsumer
+		}
+
+		if c, ok := o.customConsumers[mt]; ok {
+			result[mt] = c
+		}
+	}
+	return result
+}
+
+// ProducersFor gets the producers for the specified media types.
+// MIME type parameters are ignored here.
+func (o *StockSmithMicroservicesAPI) ProducersFor(mediaTypes []string) map[string]runtime.Producer {
+	result := make(map[string]runtime.Producer, len(mediaTypes))
+	for _, mt := range mediaTypes {
+		switch mt {
+		case "application/json":
+			result["application/json"] = o.JSONProducer
+		}
+
+		if p, ok := o.customProducers[mt]; ok {
+			result[mt] = p
+		}
+	}
+	return result
+}
+
+// HandlerFor gets a http.Handler for the provided operation method and path
+func (o *StockSmithMicroservicesAPI) HandlerFor(method, path string) (http.Handler, bool) {
+	if o.handlers == nil {
+		return nil, false
+	}
+	um := strings.ToUpper(method)
+	if _, ok := o.handlers[um]; !ok {
+		return nil, false
+	}
+	if path == "/" {
+		path = ""
+	}
+	h, ok := o.handlers[um][path]
+	return h, ok
+}
+
+// Context returns the middleware context for the stock smith microservices API
+func (o *StockSmithMicroservicesAPI) Context() *middleware.Context {
+	if o.context == nil {
+		o.context = middleware.NewRoutableContext(o.spec, o, nil)
+	}
+
+	return o.context
+}
+
+func (o *StockSmithMicroservicesAPI) initHandlerCache() {
+	o.Context() // don't care about the result, just that the initialization happened
+	if o.handlers == nil {
+		o.handlers = make(map[string]map[string]http.Handler)
+	}
+
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/stocksmith/api/news/query"] = news_api.NewGetStocksmithAPINewsQuery(o.context, o.NewsAPIGetStocksmithAPINewsQueryHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/stocksmith/api/stocks/queryStock"] = stock_api.NewGetStocksmithAPIStocksQueryStock(o.context, o.StockAPIGetStocksmithAPIStocksQueryStockHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/stocksmith/api/stocks/queryTop"] = stock_api.NewGetStocksmithAPIStocksQueryTop(o.context, o.StockAPIGetStocksmithAPIStocksQueryTopHandler)
+}
+
+// Serve creates a http handler to serve the API over HTTP
+// can be used directly in http.ListenAndServe(":8000", api.Serve(nil))
+func (o *StockSmithMicroservicesAPI) Serve(builder middleware.Builder) http.Handler {
+	o.Init()
+
+	if o.Middleware != nil {
+		return o.Middleware(builder)
+	}
+	return o.context.APIHandler(builder)
+}
+
+// Init allows you to just initialize the handler cache, you can then recompose the middleware as you see fit
+func (o *StockSmithMicroservicesAPI) Init() {
+	if len(o.handlers) == 0 {
+		o.initHandlerCache()
+	}
+}
+
+// RegisterConsumer allows you to add (or override) a consumer for a media type.
+func (o *StockSmithMicroservicesAPI) RegisterConsumer(mediaType string, consumer runtime.Consumer) {
+	o.customConsumers[mediaType] = consumer
+}
+
+// RegisterProducer allows you to add (or override) a producer for a media type.
+func (o *StockSmithMicroservicesAPI) RegisterProducer(mediaType string, producer runtime.Producer) {
+	o.customProducers[mediaType] = producer
+}
+
+// AddMiddlewareFor adds a http middleware to existing handler
+func (o *StockSmithMicroservicesAPI) AddMiddlewareFor(method, path string, builder middleware.Builder) {
+	um := strings.ToUpper(method)
+	if path == "/" {
+		path = ""
+	}
+	o.Init()
+	if h, ok := o.handlers[um][path]; ok {
+		o.handlers[method][path] = builder(h)
+	}
+}
