# back-end/pkg/server/restapi/operations/stock_api/get_stocks_query_stock_responses.go
@@ -1,61 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package stock_api
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"github.com/stocksmith/stockadvisor-web-app/back-end/pkg/server/models"
-)
-
-// GetStocksQueryStockOKCode is the HTTP code returned for type GetStocksQueryStockOK
-const GetStocksQueryStockOKCode int = 200
-
-/*GetStocksQueryStockOK Successful Stock Query
-
-swagger:response getStocksQueryStockOK
-*/
-type GetStocksQueryStockOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload []*models.StockData `json:"body,omitempty"`
-}
-
-// NewGetStocksQueryStockOK creates GetStocksQueryStockOK with default headers values
-func NewGetStocksQueryStockOK() *GetStocksQueryStockOK {
-
-	return &GetStocksQueryStockOK{}
-}
-
-// WithPayload adds the payload to the get stocks query stock o k response
-func (o *GetStocksQueryStockOK) WithPayload(payload []*models.StockData) *GetStocksQueryStockOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get stocks query stock o k response
-func (o *GetStocksQueryStockOK) SetPayload(payload []*models.StockData) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetStocksQueryStockOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if payload == nil {
-		// return empty array
-		payload = make([]*models.StockData, 0, 50)
-	}
-
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-}
